Fix bugs is auth-controller.js and Add error handler
